SimpleComplex/Validate 1.x, 2017-08-22
--------------------------------------
- Validate recording do (at least) log failing subject's type.
- Validate->numeric() didn't accept leading hyphen, and (not really a bug)
  simple emptyness checks relied on ctype_digit().

SimpleComplex/Validate 1.x, 2017-08-20
--------------------------------------
- ValidationRuleSet constructor shan't have any required parameters,
  to allow Utils::cast()'ing to it.

SimpleComplex/Validate 1.x, 2017-08-10
--------------------------------------
- ValidateAgainstRuleSet::getInstance() must refer and return by rule provider
  class name, because otherwise there's no guarantee that requested and returned
  instance are effectively identical.
- Validate is not allowed to have state, because challenge() calls otherwise
  could leak state to eachother.
- ValidateAgainstRuleSet is not allowed to have state (except when recording),
  because that would void ::getInstance() warranty.

SimpleComplex/Validate 1.x, 2017-08-06
--------------------------------------
- Renamed class ValidateAgainstRuleSet; from ValidateByRules.
- Fixed that empty() didn't handle Traversable and ArrayAccess correctly at all.
- 'loopable' is 'iterable' that allows non-Traversable object
  except if (also) ArrayAccess.

SimpleComplex/Validate 1.x, 2017-08-06
--------------------------------------
- Non-provider rule listItems replaces listItemPrototype.
- Fixed that optional is to be ignored for root ruleSet; not the opposite.
- Fixed that recording validation must record missing non-optional bucket.
- Fixed that listItems subsidary rules minOccur/maxOccur shan't stop
  validation on failure when recording failures.
- Abandoned attempts to make listItems support un-nested singleton item;
  that awful XML pattern. Users must instead use two (similar) rule sets.
- Implemented tableElements subsidary rules exclusive, whitelist, blacklist.

SimpleComplex/Validate 1.x, 2017-08-05
--------------------------------------