@@ -1,5 +1,9 @@
 SimpleComplex/Validate 1.x, 2017-08-22
 --------------------------------------
+- Validate constructor do not have to populate non-rule methods instance var.
+
+SimpleComplex/Validate 1.x, 2017-08-22
+--------------------------------------
 - Validate recording do (at least) log failing subject's type.
 - Validate->numeric() didn't accept leading hyphen, and (not really a bug)
   simple emptyness checks relied on ctype_digit().
